--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,94 +1,160 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    /* border: 1px solid rgb(173, 113, 0); */
-    color: white;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* border: 1px solid rgb(173, 113, 0); */
+  color: white;
 }
 
-header{
-    display: flex;
-    height: 60px;
-    width: 100%;
-    /* background-color: rgb(0, 0, 0); */
-    background-color: transparent;
-    align-items: center;
+#Home {
+  background: url('../Assets/bg1.jpg');
+  /* background-position: center; */
+  background-repeat: no-repeat;
+  /* background-size: contain; */
+  background-size: 115% 115%;
+  transition: background 0.2s;
+  height: 100vh;
 }
 
-header h1{
-    margin-left: 1em;
+#Home * {
+  pointer-events: none;
 }
 
-header ul{
-    display: flex;
-    margin-left: 70em;
-    margin-top: -3em;
+#Home .pointer-events {
+  pointer-events: unset;
+  pointer-events: all;
 }
 
-header ul Button{
-    margin-right: 5em;
-    list-style: none;
-    font-size: 20px;
-    font-weight: bold;
-}
-header ul button{
-    margin-right: 2em;
-    list-style: none;
-    font-size: 20px;
-    font-weight: bold;
+#Home img {
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  position: relative;
 }
 
-header ul li a{
-    text-decoration: none;
+header {
+  display: flex;
+  height: 60px;
+  width: 100%;
+  /* background-color: rgb(0, 0, 0); */
+  background-color: transparent;
+  align-items: center;
+  /* background-color: pink; */
 }
 
-.landing-page{
-    /* height: calc(100vh - 60px); */
-    height: 100vh;
-    width: 100%;
-    /* background-color: brown; */
-    background-size: cover;
-    /* overflow: hidden; */
-    position: relative;
-    display: flex;
-    align-items: center;
-    /* justify-content: center; */
+header h1 {
+  margin-left: 1em;
 }
 
-.landing-page #video{
-    position: absolute;
-    /* height: calc(100vh - 60px); */
-    height: 120vh;
-    width: 100%;
-    background-size: cover;
-    margin-top: -10vh;
-    z-index: -10;
-    /* background-color: red; */
+header ul {
+  display: flex;
+  margin-left: 70em;
+  margin-top: -3em;
 }
 
-.heading{
-    margin-top: -13em;
-    margin-left: 4em;
-    position: absolute;
-    z-index: 99;
-    color: black;
-    /* mix-blend-mode: exclusion; */
+header ul Button {
+  margin-right: 5em;
+  list-style: none;
+  font-size: 20px;
+  font-weight: bold;
+}
+header ul button {
+  margin-right: 2em;
+  list-style: none;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.heading h1{
-    mix-blend-mode: exclusion;
-    font-size: 100px;
-    /* outline: red; */
-    /* color: transparent; */
-    /* text-shadow: 0 0 2px red; */
-    /* mix-blend-mode: multiply; */
+header ul li a {
+  text-decoration: none;
 }
 
-.heading h2{
-    mix-blend-mode: exclusion;
-    font-size: 40px;
+.landing-page {
+  /* height: calc(100vh - 60px); */
+  height: 100vh;
+  width: 100%;
+  /* background-color: brown; */
+  background-size: cover;
+  /* overflow: hidden; */
+  position: relative;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
 }
 
-.heading h5 a{
-    color: rgb(255, 0, 0);
+.landing-page #video {
+  position: absolute;
+  /* height: calc(100vh - 60px); */
+  height: 120vh;
+  width: 100%;
+  background-size: cover;
+  margin-top: -10vh;
+  z-index: -10;
+  /* background-color: red; */
+}
+
+.Home {
+  background-color: darkgrey;
+}
+
+.heading {
+  margin-top: -13em;
+  margin-left: 4em;
+  position: absolute;
+  z-index: 99;
+  color: black;
+  /* background-color: seagreen; */
+  /* mix-blend-mode: exclusion; */
+}
+
+.heading h1 {
+  mix-blend-mode: exclusion;
+  font-size: 100px;
+  color: black;
+  color: rgb(255, 0, 0);
+
+  /* outline: red; */
+  /* color: transparent; */
+  /* text-shadow: 0 0 2px red; */
+  /* mix-blend-mode: multiply; */
+}
+
+.heading h2 {
+  mix-blend-mode: exclusion;
+  font-size: 43px;
+  color: black;
+  color: rgb(255, 0, 0);
+  margin: 0 12px 0 0;
+}
+
+.heading h4 {
+  color: black;
+  color: rgb(255, 0, 0);
+}
+
+.heading h4 a {
+  color: black;
+  color: rgb(60, 43, 133);
+  /* letter-spacing: 5px; */
+  word-spacing: 4px;
+  margin: 0 5px;
+}
+
+.Typewriter__wrapper {
+  color: red;
+  font-size: 40px;
+  mix-blend-mode: exclusion;
+  font-style: bold;
+  font-weight: 500;
+}
+
+.Typewriter__cursor {
+  font-size: 40px;
+  color: black;
+}
+
+.heading .oneline {
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
 }
